--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -1,83 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FilterActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
 
+<!--    <ImageView-->
+<!--        android:id="@+id/imageViewFilter"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_weight="1"-->
+<!--        android:scaleType="centerCrop"/>-->
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/gpuImageView" />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Brightness"-->
+<!--        android:layout_marginTop="16dp"/>-->
+<!--    <SeekBar-->
+<!--        android:id="@+id/seekBarBrightness"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:max="100"-->
+<!--        android:progress="50"/>-->
 
-    <!-- Exibe a imagem com filtros -->
-    <jp.co.cyberagent.android.gpuimage.GPUImageView
-        android:id="@+id/gpuImageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/buttonContainer" />
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Saturation"-->
+<!--        android:layout_marginTop="16dp"/>-->
+<!--    <SeekBar-->
+<!--        android:id="@+id/seekBarSaturation"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:max="100"-->
+<!--        android:progress="50"/>-->
 
-    <!-- Container dos botões com margens e espaçamento -->
-    <LinearLayout
-        android:id="@+id/buttonContainer"
-        android:orientation="horizontal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/gpuImageView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Contrast"-->
+<!--        android:layout_marginTop="16dp"/>-->
+<!--    <SeekBar-->
+<!--        android:id="@+id/seekBarContrast"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:max="100"-->
+<!--        android:progress="50"/>-->
 
-        <!-- Botões com design moderno -->
-        <Button
-            android:id="@+id/btnSepia"
-            style="@style/FilterButton"
-            android:text="Sepia"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintWidth_percent="0.22" />
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:layout_marginTop="16dp">-->
 
-        <Button
-            android:id="@+id/btnInvert"
-            style="@style/FilterButton"
-            android:text="Invert"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintWidth_percent="0.22" />
+<!--        <Button-->
+<!--            android:id="@+id/buttonResetFilter"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Reset"/>-->
 
-        <Button
-            android:id="@+id/btnGrayscale"
-            style="@style/FilterButton"
-            android:text="Grayscale"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintWidth_percent="0.22" />
-
-        <Button
-            android:id="@+id/btnCustomFilter"
-            style="@style/FilterButton"
-            android:text="Custom"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintWidth_percent="0.22" />
-    </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <Button-->
+<!--            android:id="@+id/buttonApplyFilter"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Apply"/>-->
+<!--    </LinearLayout>-->
+</LinearLayout>
