--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,7 +109,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Galeria"
+                        android:text="Gallery"
                         android:textSize="14sp"
                         android:layout_marginTop="8dp"
                         android:gravity="center" />
@@ -138,7 +138,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Filtro"
+                        android:text="Apply Filter"
                         android:textSize="14sp"
                         android:layout_marginTop="8dp"
                         android:gravity="center" />
@@ -178,9 +178,21 @@
                 android:id="@+id/imageViewGallery"
                 android:layout_width="match_parent"
                 android:layout_height="700dp"
-                android:layout_marginTop="30dp"
-                android:scaleType="centerCrop" />
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                />
+
+            <Button
+                android:id="@+id/saveImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Save Image"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp" />
+
         </LinearLayout>
+
+
     </ScrollView>
 
 </RelativeLayout>
