--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MainActivity"
     android:background="@color/white"
     android:focusableInTouchMode="true"
@@ -177,22 +177,106 @@
             <ImageView
                 android:id="@+id/imageViewGallery"
                 android:layout_width="match_parent"
-                android:layout_height="700dp"
+                android:layout_height="500dp"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 />
 
-            <Button
-                android:id="@+id/saveImageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Save Image"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp" />
-
         </LinearLayout>
 
-
     </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/navigationBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:elevation="8dp"
+        android:gravity="center">
+
+    <!-- Opção 1: Salvar a foto -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true">
+
+        <ImageView
+            android:id="@+id/iconSavePhoto"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/save_image"
+            android:contentDescription="Save Photo"
+            app:tint="@color/primaryColor" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save Photo"
+            android:textSize="12sp"
+            android:layout_marginTop="4dp"
+            android:gravity="center" />
+    </LinearLayout>
+
+    <!-- Opção 2: Criar um novo filtro -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true">
+
+        <ImageView
+            android:id="@+id/iconCreateFilter"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/create_filter"
+            android:contentDescription="Create Filter"
+            app:tint="@color/primaryColor" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Filter"
+            android:textSize="12sp"
+            android:layout_marginTop="4dp"
+            android:gravity="center" />
+    </LinearLayout>
+
+    <!-- Opção 3: Ver filtros salvos -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true">
+
+        <ImageView
+            android:id="@+id/iconViewFilters"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/view_filters"
+            android:contentDescription="View Filters"
+            app:tint="@color/primaryColor" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Filters"
+            android:textSize="12sp"
+            android:layout_marginTop="4dp"
+            android:gravity="center" />
+    </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
