--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -17,7 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="brightness"
+        android:text="Brightness"
         android:textSize="18sp"
         android:layout_marginTop="16dp" />
 
@@ -43,27 +43,17 @@
         android:max="200"
         android:progress="100" />
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <!-- Conteúdo Principal da tela (exemplo) -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="16dp"
-        android:background="@color/white">
-
-
-        <HorizontalScrollView
-            android:id="@+id/filterScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="16dp"
-            android:padding="8dp">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+        android:layout_above="@id/navigationBar">
 
                 <Button
                     android:id="@+id/btnFilterGrayScale"
@@ -90,19 +80,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Original" />
-
-            </LinearLayout>
-        </HorizontalScrollView>
-    </RelativeLayout>
+                    android:drawableLeft="@drawable/filter1"/>
 
     <Button
         android:id="@+id/applyFilterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Apply Filter"
-        android:layout_marginStart="150dp"
-        android:gravity="center"/>
+        android:layout_marginStart="130dp"
+        android:gravity="center"
+        android:backgroundTint="#FFC107"
+        android:layout_marginTop="10dp"/>
+        </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
