--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,29 +50,34 @@
             android:padding="20dp"
             android:gravity="center_horizontal">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
 
-            <TextView
-                android:id="@+id/textViewName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="20sp"
-                android:textColor="@color/primaryColor"
-                android:layout_marginTop="10dp"
-                android:textAlignment="center" />
-            <TextView
-                android:id="@+id/textViewEmail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="16sp"
-                android:textColor="@color/primaryColor"
-                android:layout_marginTop="10dp"
-                android:textAlignment="center" />
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp">
+
+                    <TextView
+                        android:id="@+id/textViewWelcome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Welcome: "
+                        android:textColor="@color/primaryColor"
+                        android:textSize="20sp"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true" />
+
+                    <TextView
+                        android:id="@+id/textViewName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textSize="20sp"
+                        android:textColor="@color/primaryColor"
+                        android:layout_toEndOf="@id/textViewWelcome"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="4dp" />
+                </RelativeLayout>
+
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fabEditProfile"
@@ -80,10 +85,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
+                android:layout_marginEnd="6dp"
                 android:backgroundTint="@color/white"
                 android:contentDescription="Edit Profile"
                 android:src="@drawable/ic_edit" />
-            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -95,6 +100,7 @@
                 android:layout_marginTop="0dp"
                 android:textAlignment="center"
                 />
+
         </LinearLayout>
 
             <LinearLayout
