--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -29,13 +29,13 @@
         android:max="200"
         android:progress="100" />
 
-    <!-- SeekBar para ajuste de contraste -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contrast"
         android:textSize="18sp"
         android:layout_marginTop="16dp" />
+
 
     <SeekBar
         android:id="@+id/contrastSeekBar"
@@ -44,86 +44,71 @@
         android:max="200"
         android:progress="100" />
 
-    <!-- Barra de navegação fixa -->
     <LinearLayout
         android:id="@+id/navigationBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="30dp"
         android:background="@color/white"
-        android:orientation="horizontal"
-        android:padding="10dp"
         android:elevation="8dp"
         android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-        <!-- Opção 1: Salvar a foto -->
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
             android:clickable="true"
-            android:focusable="true">
+            android:focusable="true"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iconSavePhoto"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/save_image"
                 android:contentDescription="Save Photo"
+                android:src="@drawable/save_image"
                 app:tint="@color/primaryColor" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save Photo"
-                android:textSize="12sp"
                 android:layout_marginTop="4dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:text="Save Photo"
+                android:textSize="12sp" />
         </LinearLayout>
 
-        <!-- Opção 2: Criar um novo filtro -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
             android:clickable="true"
-            android:focusable="true">
-
-        </LinearLayout>
-
-        <!-- Opção 3: Ver filtros salvos -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical"
+            android:focusable="true"
             android:gravity="center"
-            android:clickable="true"
-            android:focusable="true">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iconViewFilters"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/view_filters"
                 android:contentDescription="View Filters"
+                android:src="@drawable/view_filters"
                 app:tint="@color/primaryColor" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Filters"
-                android:textSize="12sp"
                 android:layout_marginTop="4dp"
-                android:gravity="center" />
+                android:gravity="center"
+                android:text="My Filters"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
-
 
     <LinearLayout
         android:id="@+id/filterButtonsContainer"
