--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,11 +56,21 @@
                     android:layout_height="wrap_content"
                     android:padding="8dp">
 
+                    <ImageButton
+                        android:id="@+id/fabEditProfile"
+                        android:layout_width="200dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="280dp"
+                        android:backgroundTint="@android:color/transparent"
+                        android:contentDescription="Edit Profile"
+                        android:elevation="0dp"
+                        android:src="@drawable/ic_edit" />
+
                     <TextView
                         android:id="@+id/textViewWelcome"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Welcome: "
+                        android:text="Welcome:"
                         android:textColor="@color/primaryColor"
                         android:textSize="20sp"
                         android:layout_alignParentStart="true"
@@ -74,21 +84,8 @@
                         android:textSize="20sp"
                         android:textColor="@color/primaryColor"
                         android:layout_toEndOf="@id/textViewWelcome"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="4dp" />
+                        android:layout_centerVertical="true" />
                 </RelativeLayout>
-
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabEditProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="6dp"
-                android:backgroundTint="@color/white"
-                android:contentDescription="Edit Profile"
-                android:src="@drawable/ic_edit" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -98,8 +95,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/primaryColor"
                 android:layout_marginTop="0dp"
-                android:textAlignment="center"
-                />
+                android:textAlignment="center" />
 
         </LinearLayout>
 
@@ -184,7 +180,6 @@
                         android:src="@drawable/ic_add_a_photo_"
                         app:tint="@color/infoColor" />
 
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -208,8 +203,7 @@
                         android:focusable="true"
                         android:contentDescription="Save Photo"
                         android:src="@drawable/save_image"
-                        android:tint="@color/buttonColor"
-                        />
+                        android:tint="@color/buttonColor" />
 
                     <TextView
                         android:layout_width="84dp"
@@ -231,18 +225,16 @@
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"/>
 
-
             <ImageButton
                 android:id="@+id/iconRotate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="@android:color/transparent"
                 android:contentDescription="Rotate Image"
                 android:src="@drawable/ic_rotate" />
 
-
         </LinearLayout>
-
-
     </ScrollView>
 </RelativeLayout>
